website nav fix

--- a/about-us.html
+++ b/about-us.html
@@ -58,11 +58,10 @@
               <div class="menu-container">
                 <ul class="menu">
                   <li class=" first"><a href="index.html">Home</a></li>
-                  <li class=""><a href="program-thursday.html">Program</a></li>
-                  <li class=""><a href="brainfactory.html">BrainFactory</a></li>
-                  <li class=""><a href="about-us.html">About Us</a></li>
+                  <li class=""><a href="program-thursday.html">Program Loading...</a></li>
+                  <li class=""><a href="speakers-thursday.html">Call for Speakers!</a></li>
+                  <li class=""><a href="about-us.html">Meet the team</a></li>
                   <li class=""><a href="tickets.html">Tickets</a></li>
-                  <li class=""><a href="speakers-thursday.html">Speakers</a></li>
                   <li class=" last"><a href="why-attend.html">History</a></li>
                 </ul>
               </div>
@@ -77,41 +76,13 @@
 
   <!-- Wrapper // Content Actions Section Ends -->
 
-
-  <div class="wrapper about-us">
-
-    <div class="container">
-
-      <!-- Content Section Begins -->
-
-      <div id="content-about-us">
-
-        <div class="justify-center">
-
-          <h2>About Us</h2>
-
-          <p>We are a team of ambitious doers, who decided to create a forum for international experts in the fields of
-            law, design, business and digital services.</p>
-
-          <p>We are all volunteers! </p>
-
-
-        </div>
-
-      </div>
-
-      <!-- Content Main Section Ends -->
-
-    </div>
-
-  </div>
-
   <div class="wrapper color-secondary team">
 
     <div id="content-team">
       <div class="justify-center">
-        <h2>Meet the team</h2>
-
+        <h2>Meet the team behind the 2025 edition!</h2>
+        <p>We are a team of ambitious doers, who decided to create a forum for international experts in the fields of
+          law, design, business and digital services. All of us volunteer our time to make the Summit happen!</p>
         <p>
           Contact anyone on the team by emailing them at firstname.lastname@legaldesignsummit.com
         </p>
@@ -119,7 +90,7 @@
 
       <div class="container">
         <div class="justify-center">
-          <h3 style="color: #c30979; margin-top: 50px; margin-bottom: 30px;">MEET THE TEAM BEHIND THE 2025 EDITION</h3>
+
         </div>
 
         <div class="row justify-content-md-center"
@@ -127,7 +98,7 @@
           <!-- Team Member 1 -->
           <div class="col-md-4">
             <h3 style="font-size: 25px;">Partnerships<br><br></h3>
-            <div class="image"><a href="mailto:partnershipslegaldesignsummit.com"><img
+            <div class="image"><a href="mailto:partnerships@legaldesignsummit.com"><img
                   src="images/team/team-2025/Stephanie_Pasquill_Partnerships.PNG"
                   style="border-radius: 50%; filter: grayscale(100%); width: 100%; aspect-ratio: 1/1; object-fit: cover;"></a>
             </div>
