--- a/speakers-thursday.html
+++ b/speakers-thursday.html
@@ -86,11 +86,10 @@
               <div class="menu-container">
                 <ul class="menu">
                   <li class=" first"><a href="index.html">Home</a></li>
-                  <li class=""><a href="volunteer.html">Join us!</a></li>
                   <li class=""><a href="program-thursday.html">Program Loading...</a></li>
-                  <li class=""><a href="about-us.html">Team & Board</a></li>
+                  <li class=""><a href="speakers-thursday.html">Call for Speakers!</a></li>
+                  <li class=""><a href="about-us.html">Meet the team</a></li>
                   <li class=""><a href="tickets.html">Tickets</a></li>
-                  <li class=""><a href="speakers-thursday.html">Speakers Loading...</a></li>
                   <li class=" last"><a href="why-attend.html">History</a></li>
                 </ul>
               </div>
@@ -101,18 +100,67 @@
     </div>
   </div>
 
-  <div style="text-align: center; padding: 40px 0;">
-    <h3>2025 speakers are loading - explore previous years speakers below!</h3>
-  </div>
+  <div style="padding: 60px 0; font-family: Arial, sans-serif;">
+    <div style="max-width: 1200px; margin: 0 auto; padding: 0 20px;">
+      <h2
+        style="text-align: center; font-size: 32px; color: #333; margin-bottom: 20px; font-weight: 700; text-transform: uppercase;">
+        WE ARE CALLING FOR SPEAKERS & LDS GALLERY PRESENTATIONS!</h2>
+      <!-- Replace these two divs with one thicker bar -->
+      <div style="height: 8px; width: 220px; background-color: #7DDFD3; margin: 0 auto 40px;"></div>
 
-  <div class="wrapper why-attend" style="padding-bottom: 0px;">
-    <div class="container">
-      <div style="text-align: center;">
+      <div style="text-align: center; max-width: 800px; margin: 0 auto 60px; line-height: 1.6; color: #555;">
+        <p>Join us for the 2025 Legal Design Summit, a global gathering dedicated to innovation, creativity, and
+          collaboration in legal design. Whether you're a seasoned expert, emerging innovator, or visionary thinker,
+          this is your opportunity to inspire change and contribute to the future of law.</p>
+      </div>
 
-        <h2>THANK YOU 2023 SPEAKERS</h2>
+      <div style="margin-bottom: 60px;">
+        <div style="margin-bottom: 40px;">
+          <h3 style="text-align: center; font-size: 24px; color: #333; margin-bottom: 20px; font-weight: 600;">BECOME A
+            SPEAKER</h3>
+          <p style="text-align: center; max-width: 800px; margin: 0 auto 20px; line-height: 1.6; color: #555;">Apply to
+            share your insights, experiences, and groundbreaking ideas on the Summit stage. As a speaker, you'll inspire
+            and engage with an international audience of forward-thinking professionals, helping shape the future of
+            legal design. Join us in making a difference in the legal industry by applying to be a speaker at our
+            upcoming event.</p>
+        </div>
 
+        <div style="margin-bottom: 40px;">
+          <h3 style="text-align: center; font-size: 24px; color: #333; margin-bottom: 20px; font-weight: 600;">PRESENT
+            AT THE LEGAL DESIGN GALLERY</h3>
+          <p style="text-align: center; max-width: 800px; margin: 0 auto 20px; line-height: 1.6; color: #555;">We're
+            excited to introduce the Legal Design Gallery, an opportunity to show your legal design works and products
+            in practice and inspire others. The Gallery will contain a selected number of works in a separate space next
+            to the main Summit hall that Summit participants can freely observe and discuss as in a museum.</p>
+          <p style="text-align: center; max-width: 800px; margin: 0 auto 20px; line-height: 1.6; color: #555;">This is
+            your chance to highlight your innovative projects, cutting-edge technologies, and impactful policy
+            solutions. Apply to engage directly with attendees, spark meaningful conversations, and help shape the
+            future of the legal field through your inspiring work. Apply through the form below - or get in touch with
+            us directly!</p>
+        </div>
+      </div>
+
+      <div style="text-align: center; margin-bottom: 40px;">
+        <h2 style="font-size: 32px; color: #333; font-weight: 700;">JOIN US!</h2>
+      </div>
+
+      <div
+        style="background-color: #000; background-image: url('audience-background.jpg'); background-size: cover; background-position: center; height: 300px; border-radius: 10px; position: relative; display: flex; align-items: center; justify-content: center; overflow: hidden;">
+        <div style="display: flex; justify-content: space-between; align-items: center; width: 100%; padding: 0 60px;">
+          <div
+            style="color: white; font-size: 28px; font-weight: 700; background-color: rgba(0, 0, 0, 0.7); padding: 15px 25px; border-radius: 5px;">
+            CALL FOR OUR LEGAL DESIGN HEROES</div>
+          <img src="images/favicon.png" alt="Legal Design Summit Logo"
+            style="width: 60px; height: 60px; border-radius: 50%; background-color: white; padding: 5px;">
+        </div>
       </div>
     </div>
+  </div>
+  <!--
+  <h2>THANK YOU 2023 SPEAKERS</h2>
+
+  </div>
+  </div>
   </div>
 
 
