--- a/tickets.html
+++ b/tickets.html
@@ -97,11 +97,10 @@
               <div class="menu-container">
                 <ul class="menu">
                   <li class=" first"><a href="index.html">Home</a></li>
-                  <li class=""><a href="volunteer.html">Join us!</a></li>
-                  <li class=""><a href="program-thursday.html">Program</a></li>
-                  <li class=""><a href="about-us.html">Team</a></li>
+                  <li class=""><a href="program-thursday.html">Program Loading...</a></li>
+                  <li class=""><a href="speakers-thursday.html">Call for Speakers!</a></li>
+                  <li class=""><a href="about-us.html">Meet the team</a></li>
                   <li class=""><a href="tickets.html">Tickets</a></li>
-                  <li class=""><a href="speakers-thursday.html">Speakers</a></li>
                   <li class=" last"><a href="why-attend.html">History</a></li>
                 </ul>
               </div>
