--- a/footer.html
+++ b/footer.html
@@ -22,7 +22,9 @@
 
   </div>
   <div>
-    <p><strong>MADE POSSIBLE in 2023 BY:</strong></p>
+    <p><strong>DO YOU WANT TO MAKE THE 2025 SUMMIT HAPPEN? GET IN TOUCH!</strong></p>
+
+    <!--
     <ul class="flex-container wrap" style="align-items: center;">
       <li class="flex-item" style="width: 80px;"><img src="images/collabs/helsinki-legal-tech-lab.png"></a></li>
       <li class="flex-item" style="width: 180px;"><img src="images/collabs/LD_logo_pieni_sb.png"></a></li>
@@ -39,7 +41,9 @@
       <li class="flex-item" style="width: 180px;"><img src="images/collabs/Booking_com.png"></a></li>
 
     </ul>
-    <p><strong>IN CO-OPERATION WITH:</strong></p>
+    -->
+    <p><strong>Ps. We also love collaborating with non-profits and academia</strong></p>
+    <!--
     <ul class="flex-container wrap" style="align-items: center;">
       <li class="flex-item" style="width: 160px;"><a><img src="images/collabs/aalto.png"></a></li>
       <li class="flex-item" style="width: 70px;"><a><img src="images/collabs/clt.png"></a></li>
@@ -82,8 +86,9 @@
 
     </ul>
   </div>
-  <!-- Content Main Section Ends -->
+  -->
+    <!-- Content Main Section Ends -->
 
 
 
-</div>
+  </div>
