--- a/index.html
+++ b/index.html
@@ -324,16 +324,12 @@
 							Click here
 						</a>
 					</p>
-					<h3 style="color: #c30979; padding-top: 40px">Thank you to all volunteers, partners and supporters
-						for the 2023 Summit
-						- it was truly amazing!</h3>
-
-					<img src="images/team/crew23.jpg">
 				</div>
-
 			</div>
+
 		</div>
-		<!-- Content Main Section Ends -->
+	</div>
+	<!-- Content Main Section Ends -->
 
 	</div>
 
@@ -369,36 +365,13 @@
 	    </div>
 	    -->
 					<div class="padding-top-40 justify-center">
-						<h3>Made possible in 2023 by:</h3>
+						<h3>Do you want to make the 2025 Summit happen? Reach out!</h3>
+
+						<h3>Legal Design Summit is made possible by:</h3>
 
 						<ul class="flex-container wrap">
-							<li class="flex-item" style="width: 160px"><a
-									href="https://www.helsinki.fi/en/networks/legal-tech-lab" target="_blank"><img
-										src="images/collabs/helsinki-legal-tech-lab.png"></a></li>
-							<li class="flex-item" style="width: 300px"><a href="https://lawyersdesignschool.com/"
-									target="_blank"><img src="images/collabs/LD_logo_pieni_sb.png"></a></li>
-							<li class="flex-item" style="width: 300px"><a href="https://www.foyen.se/en/"
-									target="_blank"><img src="images/collabs/Foyen_svart.png"></a></li>
-							<li class="flex-item" style="width: 250px"><a href="https://www.almatalent.fi/"
-									target="_blank"><img src="images/collabs/AlmaTalent_black_rgb.png"></a></li>
-							<li class="flex-item" style="width: 220px"><a href="http://www.pickeringpearce.com/"
-									target="_blank"><img src="images/collabs/Pickering-Pearce-Logo-new.png"></a></li>
-							<li class="flex-item" style="width: 190px"><a href="https://treehouseinnovation.com/"
-									target="_blank"><img src="images/collabs/Treehouse-Jul2016.png"></a></li>
-							<li class="flex-item" style="width: 190px;"><a href="https://www.dottirlaw.com/"
-									target="_blank"><img src="images/collabs/Dottir-logo-musta.jpg"></a></li>
-							<li class="flex-item" style="width: 250px"><a href="https://www.tietoevry.com/fi/"
-									target="_blank"><img src="images/collabs/Tietoevry.png"></a></li>
-							<li class="flex-item" style="width: 170px"><a href="https://shop.edita.fi/"
-									target="_blank"><img src="images/collabs/Edita.png"></a></li>
-							<li class="flex-item" style="width: 200px"><a href="https://www.dlapiper.com/en-us"
-									target="_blank"><img src="images/collabs/DLA_Piper.jpg"></a></li>
-							<li class="flex-item" style="width: 290px"><a href="https://wearehansen.se/"
-									target="_blank"><img src="images/collabs/Hansen.jpg"></a></li>
-							<li class="flex-item" style="width: 230px"><a href="https://www.simmons-simmons.com/"
-									target="_blank"><img src="images/collabs/Simmons_&_Simmons_logo.svg.png"></a></li>
-							<li class="flex-item" style="width: 320px"><a href="https://www.booking.com/"
-									target="_blank"><img src="images/collabs/Booking_com.png"></a></li>
+							<li class="flex-item" style="width: 170px;"><a href="https://www.helsinki.fi/en/faculty-law"
+									target="_blank"><img src="images/collabs/Helsingin-yliopisto-oikis.PNG"></a></li>
 						</ul>
 					</div>
 				</div>
@@ -414,18 +387,6 @@
 		<!-- Container Section Ends -->
 
 	</div>
-
-	<!-- Wrapper // Content Events Section Ends -->
-
-	<!-- Wrapper // Content Twitter Section Begins -->
-
-
-
-	<!-- Wrapper // Content Twitter Section Ends -->
-
-
-
-
 
 	<!-- Wrapper // Content Propositions Section Begins -->
 
@@ -464,11 +425,11 @@
 	</div>
 
 	<div class="padding-top-40 justify-center" style="background-color: white;">
-		<h3>In co-operation with</h3>
+		<h3>In co-operation with:</h3>
 		<p>We love collaborating with non-profits - Get in touch to join forces with us!</p>
 
 		<ul class="flex-container wrap">
-			<li class="flex-item" style="width: 300px"><a href="https://www.aalto.fi/en" target="_blank"><img
+			<!--<li class="flex-item" style="width: 300px"><a href="https://www.aalto.fi/en" target="_blank"><img
 						src="images/collabs/aalto.png"></a></li>
 			<li class="flex-item" style="width: 150px"><a href="https://www.copenhagenlegaltech.dk/"
 					target="_blank"><img src="images/collabs/clt.png"></a></li>
@@ -480,10 +441,10 @@
 			</li>
 			<li class="flex-item"><a
 					href="https://law.vanderbilt.edu/academics/academic-programs/law-and-innovation/activities.php"
-					target="_blank"><img src="images/collabs/vanderbilt.png"></a></li>
+					target="_blank"><img src="images/collabs/vanderbilt.png"></a></li>-->
 			<li class="flex-item" style="width: 150px;"><a href="https://legalhackers.org/" target="_blank"><img
 						src="images/collabs/lh.png"></a></li>
-			<li class="flex-item" style="width: 250px;"><a href="https://www.nulawlab.org/" target="_blank"><img
+			<!--<li class="flex-item" style="width: 250px;"><a href="https://www.nulawlab.org/" target="_blank"><img
 						src="images/collabs/nu-law.png"></a></li>
 			<li class="flex-item" style="width: 250px;"><a href="https://litelab.law.hku.hk/" target="_blank"><img
 						src="images/collabs/LITE-Lab.jpg"></a></li>
@@ -509,10 +470,9 @@
 			<li class="flex-item" style="width: 300px;"><a href="https://sjquinney.utah.edu/" target="_blank"><img
 						src="images/collabs/college-of-law-logolcolor.jpg"></a></li>
 			<li class="flex-item" style="width: 300px;"><a href="https://www.lancaster.ac.uk/law/" target="_blank"><img
-						src="images/collabs/lancaster-logo-2.PNG"></a></li>
-			<li class="flex-item" style="width: 170px;"><a href="https://www.helsinki.fi/en/faculty-law"
-					target="_blank"><img src="images/collabs/Helsingin-yliopisto-oikis.PNG"></a></li>
-			<li class="flex-item"><a href="https://www.elegal.technology/" target="_blank"><img
+						src="images/collabs/lancaster-logo-2.PNG"></a></li>-->
+
+			<!--	<li class="flex-item"><a href="https://www.elegal.technology/" target="_blank"><img
 						src="images/collabs/logo-eLegal.png"></a></li>
 			<li class="flex-item" style="width: 370px;"><a href="https://www.laurea.fi/en/" target="_blank"><img
 						src="images/collabs/Laurea.png"></a></li>
@@ -520,43 +480,39 @@
 						src="images/collabs/UEF.jpg"></a></li>
 			<li class="flex-item" style="width: 200px;"><a
 					href="https://oikeus.fi/hallintooikeudet/helsinginhallinto-oikeus/en/index.html"
-					target="_blank"><img src="images/collabs/Helsinki_Court_of_Appeal.png"></a></li>
+					target="_blank"><img src="images/collabs/Helsinki_Court_of_Appeal.png"></a></li>-->
 			<li class="flex-item" style="width: 390px;"><a href="https://www.domstol.se/helsingborgs-tingsratt/"
 					target="_blank"><img src="images/collabs/tr_Helsingborg_logo.png"></a></li>
-			<li class="flex-item" style="width: 270px;"><a href="https://bond.edu.au/" target="_blank"><img
+			<!--<li class="flex-item" style="width: 270px;"><a href="https://bond.edu.au/" target="_blank"><img
 						src="images/collabs/Bond-University.jpg"></a></li>
 			<li class="flex-item" style="width: 250px;"><a
 					href="https://oikeus.fi/karajaoikeudet/helsinginkarajaoikeus/en/index.html" target="_blank"><img
 						src="images/collabs/Helsinki_District_Court_Logo.jpg"></a></li>
 			<li class="flex-item" style="width: 300px;"><a href="https://www.pelastakaalapset.fi/en/frontpage/"
-					target="_blank"><img src="images/collabs/Save_the_Children.png"></a></li>
+					target="_blank"><img src="images/collabs/Save_the_Children.png"></a></li>-->
 			<li class="flex-item" style="width: 270px;"><a
 					href="https://www.domstol.se/domstolsverket/other-languages/english/" target="_blank"><img
 						src="images/collabs/Domstolsverket.png"></a></li>
-			<li class="flex-item" style="width: 270px;"><a href="https://www.legaloperations.com.br/"
+			<!--<li class="flex-item" style="width: 270px;"><a href="https://www.legaloperations.com.br/"
 					target="_blank"><img src="images/collabs/CLOB.png"></a></li>
 			<li class="flex-item" style="width: 220px;"><a href="https://www.linkedin.com/company/neld-usp"
 					target="_blank"><img src="images/collabs/NELD.png"></a></li>
 			<li class="flex-item" style="width: 260px;"><a
 					href="https://www.helsinki.fi/en/networks/helsinki-incubators" target="_blank"><img
-						src="images/collabs/Helsinki-Incubators.png"></a></li>
+						src="images/collabs/Helsinki-Incubators.png"></a></li>-->
 			<li class="flex-item" style="width: 220px;"><a href="https://taltech.ee/en/department-law"
 					target="_blank"><img src="images/collabs/TalTech.png"></a></li>
-			<li class="flex-item" style="width: 350px;"><a href="https://direitosp.fgv.br/en" target="_blank"><img
+			<!--<li class="flex-item" style="width: 350px;"><a href="https://direitosp.fgv.br/en" target="_blank"><img
 						src="images/collabs/FGV-Direito-SP.png"></a></li>
 			<li class="flex-item" style="width: 270px;"><a
 					href="https://www.uchceu.com/en/advanced-learning-facilities/legal-tech" target="_blank"><img
-						src="images/collabs/Erasmus_program.PNG"></a></li>
+						src="images/collabs/Erasmus_program.PNG"></a></li>-->
 		</ul>
 
 	</div>
 
 
 	</div>
-
-
-
-
 	<div class="wrapper actions" style="background-color: white; padding-bottom: 0px;">
 		<div class="container">
 			<div id="content-actions">
