--- a/program-thursday.html
+++ b/program-thursday.html
@@ -144,191 +144,223 @@
 
   </div>
 
-  <!--<table>
-      <colgroup>
-        <col style="width: 20%;">
-        <col style="width: 70%">
-      </colgroup>
-      <tbody class="timetable" style="padding-left: 20px;">
-        <tr>
-          <td>
-            <h3>09.00-10.00</h3>
-          </td>
-          <td>
-            <h3>Registration @ Great Hall of the University of Helsinki, Aleksanterinkatu 5</h3>
-          </td>
-        </tr>
-        <tr>
-          <td>
-            <h3>10.00-10.15</h3>
-          </td>
-          <td>
-            <h3>Welcome to Summit, practical info, introductions</h3>
-          </td>
-        </tr>
+  <div style="padding: 60px 0; font-family: Arial, sans-serif;">
+    <div style="max-width: 1200px; margin: 0 auto; padding: 0 20px;">
+      <h2
+        style="text-align: center; font-size: 32px; color: #333; margin-bottom: 20px; font-weight: 700; text-transform: uppercase;">
+        EXPLORE PREVIOUS YEARS TOPICS AND SPEAKERS
+      </h2>
+      <div style="height: 8px; width: 220px; background-color: #7DDFD3; margin: 0 auto 40px;"></div>
 
-        <tr>
-          <td colspan="2">
-            <div class="panel_discussion">
-              <h4>I. - Beautiful & Better Documents & Visualising Information</h4>
-            </div>
-          </td>
-        </tr>
-        <tr>
-          <td style="border-left: 4px solid #aeede8">
-            <h3>10.15-10.35 </h3>
-          </td>
-          <td style="border-right: 4px solid #aeede8">
-            <h3><span style="font-weight: bold;">Marco Imperiale</span>: The Beauty in Legal Design - from Leonardo to
-              21st Century Human Centrism</h3>
-          </td>
-        </tr>
-        <tr class="borders">
-          <td style="border-left: 4px solid #aeede8">
-            <h3>10.40-11.00 </h3>
-          </td>
-          <td style="border-right: 4px solid #aeede8">
-            <h3><span style="font-weight: bold;">Stefania Passera</span>: Contract Design Mythbusting</h3>
-          </td>
-        </tr>
-        <tr class="borders">
-          <td style="border-left: 4px solid #aeede8">
-            <h3>11.05-11:25 </h3>
-          </td>
-          <td style="border-right: 4px solid #aeede8">
-            <h3><span style="font-weight: bold;">Dan Riley</span>: Enhancing Forensic Accident Investigation with
-              Immersive Visualization: A Case Study</h3>
-          </td>
-        </tr>
-        <tr class="borders">
-          <td style="border-left: 4px solid #aeede8">
-            <h3>11.30-11.50 </h3>
-          </td>
-          <td style="border-right: 4px solid #aeede8">
-            <h3><span style="font-weight: bold;">Mel Flanagan</span>: Visualizing Laws for Clarity, Connection, and
-              Collaboration</h3>
-          </td>
-        </tr>
-        <tr class="borders">
-          <td style="border-left: 4px solid #aeede8; border-bottom: 4px solid #aeede8">
-            <h3>11.55-12.15 </h3>
-          </td>
-          <td style="border-right: 4px solid #aeede8; border-bottom: 4px solid #aeede8">
-            <h3><span style="font-weight: bold;">Kanan Dhru</span>: The Role of the Public Sector in Growing the Legal
-              Design movement: Lawtoons project in India</h3>
-          </td>
-        </tr>
+      <h2
+        style="text-align: center; font-size: 32px; color: #333; margin-bottom: 20px; font-weight: 700; text-transform: uppercase;">
+        LEGAL DESIGN SUMMIT 2023
+      </h2>
+      <div style="height: 8px; width: 220px; background-color: #7DDFD3; margin: 0 auto 40px;"></div>
 
-        <tr>
-          <td>
-            <h3>12.20-13.30</h3>
-          </td>
-          <td>
-            <h3>Lunch Break</h3>
-          </td>
-        </tr>
+      <div style="text-align: center; max-width: 800px; margin: 0 auto 40px; line-height: 1.6; color: #555;">
+        <p>Held at the Great Hall of the University of Helsinki, Aleksanterinkatu 5</p>
+      </div>
 
-        <tr>
-          <td colspan="2">
-            <div class="panel_discussion">
-              <h4>II. - THE CASE FOR LEGAL DESIGN</h4>
-            </div>
-          </td>
-        </tr>
-        <tr>
-          <td style="border-left: 4px solid #aeede8">
-            <h3>13.35-13.55 </h3>
-          </td>
-          <td style="border-right: 4px solid #aeede8">
-            <h3><span style="font-weight: bold;">Erika Pagano, Callum Brown and Glen Byrne</span>: No Short Change:
-              Making the Business Case for Legal Design</h3>
-          </td>
-        </tr>
-        <tr>
-          <td style="border-left: 4px solid #aeede8">
-            <h3>14.00-14.30 </h3>
-          </td>
-          <td style="border-right: 4px solid #aeede8">
-            <h3><span style="font-weight: bold;">Astrid Kohlmeier (lead), Dorra Harrar, Laura Hartmann, Karol
-                Valencia</span>: Innovative Thinking and Cultural Diversity of Legal Design</h3>
-          </td>
-        </tr>
-        <tr>
-          <td style="border-left: 4px solid #aeede8; border-bottom: 4px solid #aeede8">
-            <h3>14.35-14.55 </h3>
-          </td>
-          <td style="border-right: 4px solid #aeede8; border-bottom: 4px solid #aeede8">
-            <h3><span style="font-weight: bold;">Marie Potel-Saville</span>: Fairness by Design: How Might We End
-              Deception and Manipulation Online?</h3>
-          </td>
-        </tr>
-        <tr>
-          <td>
-            <h3>15.00-15.45</h3>
-          </td>
-          <td>
-            <h3>Break</h3>
-          </td>
-        </tr>
+      <div style="background-color: #aeede8; padding: 15px; margin: 30px 0; text-align: center;">
+        <h3 style="color: #c30979; font-size: 24px; margin: 0; text-transform: uppercase; font-weight: 700;">
+          I. BEAUTIFUL & BETTER DOCUMENTS & VISUALISING INFORMATION
+        </h3>
+      </div>
 
-        <tr>
-          <td colspan="2">
-            <div class="panel_discussion">
-              <h4>III. - Legal Design as a New Mindset in the Face of Modern Tools</h4>
-            </div>
-          </td>
-        </tr>
-        <tr>
-          <td style="border-left: 4px solid #aeede8">
-            <h3>15.50-16.10 </h3>
-          </td>
-          <td style="border-right: 4px solid #aeede8">
-            <h3><span style="font-weight: bold;">Riikka Koulu</span>: Law as Design: Usability and Fundamental Rights in
-              Digital Public Administration</h3>
-          </td>
-        </tr>
-        <tr>
-          <td style="border-left: 4px solid #aeede8">
-            <h3>16.15-16.35 </h3>
-          </td>
-          <td style="border-right: 4px solid #aeede8">
-            <h3><span style="font-weight: bold;">Geoffrey Delcroix</span>: Game Changer: How Design Became the
-              Cornerstone of Ubisoft Legal Team Transformation</h3>
-          </td>
-        </tr>
-        <tr>
-          <td style="border-left: 4px solid #aeede8; border-bottom: 4px solid #aeede8">
-            <h3>16.40-17.00 </h3>
-          </td>
-          <td style="border-right: 4px solid #aeede8; border-bottom: 4px solid #aeede8">
-            <h3><span style="font-weight: bold;">Natalie Byrom</span>: Justice Data Governance for People Centered
-              Justice</h3>
-          </td>
-        </tr>
-        <tr>
-          <td>
-            <h3>17.00-17.15</h3>
-          </td>
-          <td>
-            <h3>Round up of Day 1</h3>
-          </td>
-        </tr>
+      <div style="margin: 30px 0;">
+        <div style="margin-bottom: 25px;">
+          <h3 style="color: #333; font-size: 20px; margin-bottom: 5px;">Marco Imperiale</h3>
+          <p style="color: #555; font-size: 18px; margin: 0;">The Beauty in Legal Design - from Leonardo to 21st Century
+            Human Centrism</p>
+        </div>
 
-        <tr>
-          <td style="vertical-align: top;">
-            <h3>18.00</h3>
-          </td>
-          <td>
-            <h3 style="margin-bottom: 16px;">After Party at Dottir!</h3>
-            <p style="margin-bottom: 32px;">After the first Summit day we are welcomed at Dottir - stay tuned for
-              details, but don’t book your evening!</p>
-            <div class="dot_logo"><a href="https://www.dottirlaw.com/" target="_blank"><img
-                  src="images/collabs/Dottir-logo-musta.jpg"></a></div>
-          </td>
-        </tr>
-      </tbody>
-    </table> -->
+        <div style="margin-bottom: 25px;">
+          <h3 style="color: #333; font-size: 20px; margin-bottom: 5px;">Stefania Passera</h3>
+          <p style="color: #555; font-size: 18px; margin: 0;">Contract Design Mythbusting</p>
+        </div>
 
+        <div style="margin-bottom: 25px;">
+          <h3 style="color: #333; font-size: 20px; margin-bottom: 5px;">Dan Riley</h3>
+          <p style="color: #555; font-size: 18px; margin: 0;">Enhancing Forensic Accident Investigation with Immersive
+            Visualization: A Case Study</p>
+        </div>
+
+        <div style="margin-bottom: 25px;">
+          <h3 style="color: #333; font-size: 20px; margin-bottom: 5px;">Mel Flanagan</h3>
+          <p style="color: #555; font-size: 18px; margin: 0;">Visualizing Laws for Clarity, Connection, and
+            Collaboration</p>
+        </div>
+
+        <div style="margin-bottom: 25px;">
+          <h3 style="color: #333; font-size: 20px; margin-bottom: 5px;">Kanan Dhru</h3>
+          <p style="color: #555; font-size: 18px; margin: 0;">The Role of the Public Sector in Growing the Legal Design
+            movement: Lawtoons project in India</p>
+        </div>
+      </div>
+
+      <div style="background-color: #aeede8; padding: 15px; margin: 30px 0; text-align: center;">
+        <h3 style="color: #c30979; font-size: 24px; margin: 0; text-transform: uppercase; font-weight: 700;">
+          II. THE CASE FOR LEGAL DESIGN
+        </h3>
+      </div>
+
+      <div style="margin: 30px 0;">
+        <div style="margin-bottom: 25px;">
+          <h3 style="color: #333; font-size: 20px; margin-bottom: 5px;">Erika Pagano, Callum Brown and Glen Byrne</h3>
+          <p style="color: #555; font-size: 18px; margin: 0;">No Short Change: Making the Business Case for Legal Design
+          </p>
+        </div>
+
+        <div style="margin-bottom: 25px;">
+          <h3 style="color: #333; font-size: 20px; margin-bottom: 5px;">Astrid Kohlmeier (lead), Dorra Harrar, Laura
+            Hartmann, Karol Valencia</h3>
+          <p style="color: #555; font-size: 18px; margin: 0;">Innovative Thinking and Cultural Diversity of Legal Design
+          </p>
+        </div>
+
+        <div style="margin-bottom: 25px;">
+          <h3 style="color: #333; font-size: 20px; margin-bottom: 5px;">Marie Potel-Saville</h3>
+          <p style="color: #555; font-size: 18px; margin: 0;">Fairness by Design: How Might We End Deception and
+            Manipulation Online?</p>
+        </div>
+      </div>
+
+      <div style="background-color: #aeede8; padding: 15px; margin: 30px 0; text-align: center;">
+        <h3 style="color: #c30979; font-size: 24px; margin: 0; text-transform: uppercase; font-weight: 700;">
+          III. LEGAL DESIGN AS A NEW MINDSET IN THE FACE OF MODERN TOOLS
+        </h3>
+      </div>
+
+      <div style="margin: 30px 0;">
+        <div style="margin-bottom: 25px;">
+          <h3 style="color: #333; font-size: 20px; margin-bottom: 5px;">Riikka Koulu</h3>
+          <p style="color: #555; font-size: 18px; margin: 0;">Law as Design: Usability and Fundamental Rights in Digital
+            Public Administration</p>
+        </div>
+
+        <div style="margin-bottom: 25px;">
+          <h3 style="color: #333; font-size: 20px; margin-bottom: 5px;">Geoffrey Delcroix</h3>
+          <p style="color: #555; font-size: 18px; margin: 0;">Game Changer: How Design Became the Cornerstone of Ubisoft
+            Legal Team Transformation</p>
+        </div>
+
+        <div style="margin-bottom: 25px;">
+          <h3 style="color: #333; font-size: 20px; margin-bottom: 5px;">Natalie Byrom</h3>
+          <p style="color: #555; font-size: 18px; margin: 0;">Justice Data Governance for People Centered Justice</p>
+        </div>
+      </div>
+
+      <div style="background-color: #aeede8; padding: 15px; margin: 30px 0; text-align: center;">
+        <h3 style="color: #c30979; font-size: 24px; margin: 0; text-transform: uppercase; font-weight: 700;">
+          IV. LEGAL DESIGN, JUSTICE AND INCLUSIVITY
+        </h3>
+      </div>
+
+      <div style="margin: 30px 0;">
+        <div style="margin-bottom: 25px;">
+          <h3 style="color: #333; font-size: 20px; margin-bottom: 5px;">Hallie Jay Pope</h3>
+          <p style="color: #555; font-size: 18px; margin: 0;">Legal information designer, educator, and cartoonist</p>
+        </div>
+
+        <div style="margin-bottom: 25px;">
+          <h3 style="color: #333; font-size: 20px; margin-bottom: 5px;">Ebru Metin</h3>
+          <p style="color: #555; font-size: 18px; margin: 0;">Early Stage Researcher at Tallinn University of
+            Technology, Founder at Legal Design Turkey</p>
+        </div>
+
+        <div style="margin-bottom: 25px;">
+          <h3 style="color: #333; font-size: 20px; margin-bottom: 5px;">Joaquin Santuber</h3>
+          <p style="color: #555; font-size: 18px; margin: 0;">Postdoctoral researcher on designing for posthuman
+            legalities—human-nature-machine relations</p>
+        </div>
+
+        <div style="margin-bottom: 25px;">
+          <h3 style="color: #333; font-size: 20px; margin-bottom: 5px;">Emily MacLoud</h3>
+          <p style="color: #555; font-size: 18px; margin: 0;">Senior Design Strategist at Portable</p>
+        </div>
+
+        <div style="margin-bottom: 25px;">
+          <h3 style="color: #333; font-size: 20px; margin-bottom: 5px;">Mariana Salgado</h3>
+          <p style="color: #555; font-size: 18px; margin: 0;">For the last three years, worked as Service designer at
+            the Finnish Ministery of the Interior</p>
+        </div>
+
+        <div style="margin-bottom: 25px;">
+          <h3 style="color: #333; font-size: 20px; margin-bottom: 5px;">Angelica Flechas</h3>
+          <p style="color: #555; font-size: 18px; margin: 0;">Founder of HÁPTICA, a service design consultancy agency
+          </p>
+        </div>
+
+        <div style="margin-bottom: 25px;">
+          <h3 style="color: #333; font-size: 20px; margin-bottom: 5px;">Zainab Malik</h3>
+          <p style="color: #555; font-size: 18px; margin: 0;">Programme Manager for the Justice Innovation Labs at HiiL
+          </p>
+        </div>
+      </div>
+
+      <div style="background-color: #aeede8; padding: 15px; margin: 30px 0; text-align: center;">
+        <h3 style="color: #c30979; font-size: 24px; margin: 0; text-transform: uppercase; font-weight: 700;">
+          V. THE FUTURE OF LEGAL DESIGN
+        </h3>
+      </div>
+
+      <div style="margin: 30px 0;">
+        <div style="margin-bottom: 25px;">
+          <h3 style="color: #333; font-size: 20px; margin-bottom: 5px;">Lina Krawietz</h3>
+          <p style="color: #555; font-size: 18px; margin: 0;">Lawyer, UX-/UI-Designer and HPI-certified Design Thinker
+          </p>
+        </div>
+
+        <div style="margin-bottom: 25px;">
+          <h3 style="color: #333; font-size: 20px; margin-bottom: 5px;">Alisha Andert</h3>
+          <p style="color: #555; font-size: 18px; margin: 0;">LL.M., Co-founder of the "This is Legal Design"
+            (innovation consultancy)</p>
+        </div>
+
+        <div style="margin-bottom: 25px;">
+          <h3 style="color: #333; font-size: 20px; margin-bottom: 5px;">Michael Doherty</h3>
+          <p style="color: #555; font-size: 18px; margin: 0;">Professor of Law, and Associate Head of the Law School, at
+            Lancaster University</p>
+        </div>
+
+        <div style="margin-bottom: 25px;">
+          <h3 style="color: #333; font-size: 20px; margin-bottom: 5px;">Dan Jackson</h3>
+          <p style="color: #555; font-size: 18px; margin: 0;">Director of NuLawLab at Northeastern University</p>
+        </div>
+
+        <div style="margin-bottom: 25px;">
+          <h3 style="color: #333; font-size: 20px; margin-bottom: 5px;">Kirsti Lonka</h3>
+          <p style="color: #555; font-size: 18px; margin: 0;">Professor of Educational Psychology at University of
+            Helsinki</p>
+        </div>
+
+        <div style="margin-bottom: 25px;">
+          <h3 style="color: #333; font-size: 20px; margin-bottom: 5px;">Aleida Luján Pinelo</h3>
+          <p style="color: #555; font-size: 18px; margin: 0;">Postdoctoral researcher at the Faculty of Law, University
+            of Turku</p>
+        </div>
+
+        <div style="margin-bottom: 25px;">
+          <h3 style="color: #333; font-size: 20px; margin-bottom: 5px;">Andrea Botero</h3>
+          <p style="color: #555; font-size: 18px; margin: 0;">Associate Professor (New Frontiers of Design) at the
+            School of Arts, Design and Architecture of Aalto University</p>
+        </div>
+
+        <div style="margin-bottom: 25px;">
+          <h3 style="color: #333; font-size: 20px; margin-bottom: 5px;">Ilona Logvinova</h3>
+          <p style="color: #555; font-size: 18px; margin: 0;">Global Head of Innovation for McKinsey Legal</p>
+        </div>
+
+        <div style="margin-bottom: 25px;">
+          <h3 style="color: #333; font-size: 20px; margin-bottom: 5px;">Cat Moon</h3>
+          <p style="color: #555; font-size: 18px; margin: 0;">Director of Innovation Design at Vanderbilt Law School and
+            #MakeLawBetter Provocateur</p>
+        </div>
+      </div>
+    </div>
+  </div>
+  </div>
 
 
 
