--- a/tickets.html
+++ b/tickets.html
@@ -130,7 +130,12 @@
         <h4>Stay tuned for the 2025 tickets</h4>
         <!-- <div style="height: 30px;" div class="margin-top-40"><h4><a href="https://ti.to/legal-design-summit-2023/legal-design-summit-2023" style="color: #50cec1;" class="link-hover">Link to the ticket site</a></h4></div> -->
         <p style="margin-top: 100px;"></p>
-
+        <div class="notification-section">
+          <a href="https://docs.google.com/forms/d/e/1FAIpQLSdcuaswTaYZ7n79MputYCVrCZiopyA82FS_GWKvLSz7hGTY5w/viewform"
+            target="_blank" class="notify-btn">
+            Get notified when tickets drop
+          </a>
+        </div>
 
         <div>
           <h2>FAQ</h2>
@@ -140,16 +145,17 @@
             <h4>How much does it cost to attend?</h4>
             <p>Completely free! But there is a no-show fee of 50 (student tickets) -150€ (normal tickets)</p>
             <h4>Where can I get a ticket?</h4>
-            <p>Link to the ticket release will be published on this site and our social media channels on Apr 10, 2023.
+            <p>Link to the ticket release will be published on this site and our social media channels on 13 April 2025.
             </p>
             <h4>Can I get a ticket for 1 day only?</h4>
             <p> All tickets are for 2 days BUT you can share your ticket with someone else if you cannot participate on
               both days. However, the person acquiring the ticket is responsible for someone to show up on both days.
               Otherwise the general no-show fee applies.</p>
             <h4>Are there different types of tickets?</h4>
-            <p>All tickets are essentially the same, including the same right to participate in the summit. There are,
-              however, a limited number of student tickets which have a lower no-show fee. Student card must be
-              presented at the entrance</p>
+            <p>We have two main types of tickets 1. Summit + workshop or 2. Summit only tickets. Summit + workshop
+              tickets entitles you to attend one of the workshops taking place Wednesday 10 September 2025 in Helsinki.
+              A Summit-only
+              ticket entitles you to both Summit days. There are student-ticket versions of both types.</p>
             <h4>Can I get a normal ticket even if I am a student?</h4>
             <p>Yes, you can, but please note then the no-show fee will be 150e!</p>
             <h4>How many tickets can I purchase?</h4>
@@ -165,8 +171,8 @@
                 be sent to: tickets@legaldesignsummit.com</li>
             </ul>
             </p>
-            <h4>Tickets are sold out, can I register for a waiting list?</h4>Our waiting list is now closed, thank you
-            for your interest!<p></p>
+            <h4>Tickets are sold out, can I register for a waiting list?</h4>
+            <p>Yes! There will be a wait-list for you to sign up through</p>
 
           </div>
         </div>
